--- a/src/default.htm
+++ b/src/default.htm
@@ -9,4 +9,22 @@
     <p>This is a simple bot to help users obtain refunds quicker and easier.</p>
     <p>Visit <a href="https://www.bullguard.com/">Bullguard Website</a> for a full range of products.</p>
 </body>
+<script type="text/javascript">
+    (function () {
+        var div = document.createElement("div");
+        document.getElementsByTagName('body')[0].appendChild(div);
+        div.outerHTML = "<div id= 'botDiv' style= 'height: 38px; position: fixed; bottom: 0; z-index: 1000; background-color: #fff' > <div id='botTitleBar' style='height: 38px; width: 400px; position:fixed; cursor: pointer;'></div><iframe width='400px' height='600px' src='https://webchat.botframework.com/embed/backendbot20170426032722?s=2LCl3XhNjM4.cwA.RgQ.FijBMFrZUx7VwDAP4T4F2pLwDwCX4mD64j9D5jjiiXo'></iframe></div>";
+
+
+        
+
+        document.querySelector('body').addEventListener('click', function (e) {
+            e.target.matches = e.target.matches || e.target.msMatchesSelector;
+            if (e.target.matches('#botTitleBar')) {
+                var botDiv = document.querySelector('#botDiv');
+                botDiv.style.height = botDiv.style.height == '600px' ? '38px' : '600px';
+            };
+        });
+    }());
+</script>
 </html>
